add other img on homepage

--- a/Cynes_Symfo/templates/base.html.twig
+++ b/Cynes_Symfo/templates/base.html.twig
@@ -42,12 +42,12 @@
 					</div>
 				</div>
 			</div>
-			<a href="<?= $router->generate('home'); ?>"><img class="logo-cynes" src="/assets/img/CYNES-logo-noir.png" alt="Logo-Cynes"></a>
+			<a href=""><img class="logo-cynes" src="/assets/img/homepage/CYNES-logo-noir.png" alt="Logo-Cynes"></a>
 		</header>
 		{% block body %}{% endblock %}
 		<footer>
 			<div class="logo-cynes-footer">
-				<img class="logo" src="/assets/img/CYNES-logo-blanc.png" alt="Logo Cynes">
+				<img class="logo" src="/assets/img/homepage/CYNES-logo-blanc.png" alt="Logo Cynes">
 			</div>
 			<div class="icone-contact">
 				<a href="https://www.instagram.com/cynes.creativeagency/" target="_blank">
