--- a/Cynes_Symfo/templates/main/homepage.html.twig
+++ b/Cynes_Symfo/templates/main/homepage.html.twig
@@ -104,9 +104,9 @@
         <h5 class="carousel-title">Ils nous font confiance</h5>
         <div class="carousel-trait"></div>
         <ul class="carousel-ul">
-            
-                <li class="carousel-list"><img class="logo-customer" src=""></li>
-            
+            {% for project in all_project %}
+                <li class="carousel-list"><img class="logo-customer" src="{{ project.logo }}"></li>
+            {% endfor %}
         </ul>
     </div>
 {% endblock %}
