display legalmentions + link

--- a/Cynes_Symfo/templates/base.html.twig
+++ b/Cynes_Symfo/templates/base.html.twig
@@ -62,7 +62,7 @@
 			</div>
 			<div class="information">
 				<span class="mention">© 2021 CYNES. | Tous droits réservés |
-					<a href="">Mentions légales</a>
+					<a href="{{ path('legal_notice') }}">Mentions légales</a>
 				</span>
 			</div>
 		</footer>
